--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -126,19 +126,23 @@
 		
 
 		.deletex{
-			width:16px;
-			height:16px;
+			width:18px;
+			height:18px;
+			
 			color: #993333 !important;
 			float:right;
 			background-color: #993333;
 			cursor: pointer; 
 			border-radius:20%;
-			padding:2px;
+			border : 2px solid #c4e9f5;
+			/*padding:2px;*/
 			text-align:center;
-			vertical-align:center;
-			z-index:5;
+			vertical-align: middle;
+			z-index:99;
 			display:none;
-			margin: 0 0 2px 2px;
+			position:absolute;
+			
+			/*margin: -18px 30px -18px -18px;*/ /*0 0 2px 2px;*/
 		}
 		
 		.chosenClassInSequence{
