Checking in first checkpoint of slow controls dashboard (built for mu2e dcs). Also moved google fonts and sort script to locally stored.

--- a/WebGUI/html/iconEditor.html
+++ b/WebGUI/html/iconEditor.html
@@ -66,7 +66,7 @@
 	}
 </style>
 
-	<link href='http://fonts.googleapis.com/css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
+	<link href='../css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
 </head>
 
 <body onload="init()">
