Fixed font.css loading issue. There were 2 fonts.css files - only use /WebPath/css/fonts.css. And avoid ../ path syntax

--- a/WebGUI/html/Physics.html
+++ b/WebGUI/html/Physics.html
@@ -3,7 +3,7 @@
 <head>
 <title>Supervisor</title>
 
-<link rel='stylesheet' type='text/css' href='../css/fonts.css?family=Donegal+One'>
+<link rel='stylesheet' type='text/css' href='/WebPath/css/fonts.css?family=Donegal+One'>
 <style type="text/css">			
 			body {
 				background-color: rgb(5,10,50);
