fixed a few bugs associated with no security and the locking mechanism

--- a/WebGUI/html/UserSettings.html
+++ b/WebGUI/html/UserSettings.html
@@ -191,8 +191,11 @@
 				//defaultColors()
 				//colorEditHandler(e)		
 				//setLayout(i,mouseEvent)
-				//updateAccount
-				//deleteAccount
+				//updateAccount(i)
+				//deleteAccount(i)
+				//createNewAccount(event)
+				//reallyDelete()			//really delete the user accout
+				//lockToUsername(i, lock)
 				
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
