--- a/WebGUI/html/MultiSelectBoxTest.html
+++ b/WebGUI/html/MultiSelectBoxTest.html
@@ -6,6 +6,14 @@
 	<script src="../js/js_lib/MultiSelectBox.js"></script>
     <script>
 
+		//THIS IS AN EXAMPLE 
+		//THIS IS AN EXAMPLE 
+		//THIS IS AN EXAMPLE 
+		//THIS IS AN EXAMPLE 
+		//THIS IS AN EXAMPLE 
+			//of how to use the library MultiSelectBox.js
+
+
         function init()
         {
                       
