--- a/WebGUI/html/EditSecurity.html
+++ b/WebGUI/html/EditSecurity.html
@@ -5,16 +5,15 @@
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
-<script type="text/JavaScript" src="/WebPath/js/DesktopWizardWindowContentCode.js"></script>
-<script type="text/JavaScript" src="/WebPath/js/editSecurity.js"></script>
-<link rel="stylesheet" type="text/css" href="../css/editSecurity.css">
+<script type="text/JavaScript" src="/WebPath/js/EditSecurity.js"></script>
+<link rel="stylesheet" type="text/css" href="../css/EditSecurity.css">
 <style>
 
 </style>
 </head>
 
 <body onload="init()">
-  <h1>Edit Security</h1>
+  <!--<h1>Edit Security</h1>-->
   <h2 id="state"></h2>
   <ul>
 
