--- a/WebGUI/html/IconEditor.html
+++ b/WebGUI/html/IconEditor.html
@@ -6,7 +6,7 @@
 <script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script><script type="text/JavaScript" src="/WebPath/js/DesktopWizardWindowContentCode.js"></script>
-<script type="text/JavaScript" src="/WebPath/js/iconEditor.js"></script>
+<script type="text/JavaScript" src="/WebPath/js/IconEditor.js"></script>
 <style>
 
 	* {
