Second step to migration to ConfigurationGroups

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -784,7 +784,7 @@
 					}
 				
 				
-				DesktopContent.XMLHttpRequest("Request?RequestType=saveNewConfigurationGroup&alias=" +
+				DesktopContent.XMLHttpRequest("Request?RequestType=saveNewConfigurationGroup&groupName=" +
 						config, configMap,createConfigGroupHandler);
 			}
 
