--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -242,7 +242,7 @@
 				_srcName = srcName;
 			
 			//force proper comment name
-			colTypes[colTypes.length-2] = "CommentDescription";
+			colHdrs[colHdrs.length-3] = "CommentDescription";
 					 
 			//cache data for add/delete ease
 			_colHdrArr = colHdrs;
