--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -127,7 +127,7 @@
 			}
 			
 			#consoleHistory::-webkit-scrollbar-thumb {
-			    background: #4D2600;
+			    background: white;
 			    -webkit-border-radius: 1ex;
 			}			
 			
