minor fix to config gui

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -189,7 +189,7 @@
 			
 			//setupConfigGroupTreeView("PhysicsWizToLatest","3"); return;
 			
-			setupGroupViewMode(); return;
+			//setupGroupViewMode(); return;
 
 			//get context and backbone member list 
 			DesktopContent.XMLHttpRequest("Request?RequestType=getContextMemberNames", "", 
